Fixed article tags alignment

--- a/src/Styles/Components/Article/Tags.scss
+++ b/src/Styles/Components/Article/Tags.scss
@@ -1,6 +1,8 @@
 .article-tags {
     display: flex;
 
+    align-items: baseline;
+
     .article-tags-content {
         display: flex;
 
